--- a/bin/install
+++ b/bin/install
@@ -68,7 +68,11 @@ get_download_file_path() {
 get_download_url() {
   local install_type=$1
   local version=$2
-  echo "https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-$version.tar.gz"
+  if [[ version == 1.* || version == 2.* ]]; then
+    echo "https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-$version.tar.gz"
+  else
+    echo https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$version.tar.gz
+  fi
 }
 
 install_elasticsearch $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
